# equipe-roteirista

./: .env.exemplo  .gitignore  CONTRIBUTING.md  LICENSE  README.md  packages.txt  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
equipe_roteirista/: streamlit_app.py  texto_base_examples.yaml
equipe_roteirista/equipe/: agente_config.py  roteirista_config.py  roteirista_crew.py  roteirista_execute.py
equipe_roteirista/equipe/config/: agents.yaml  tasks.yaml
equipe_roteirista/pages/sobre/: objetivo.py  visao_geral.py
equipe_roteirista/paginas/sobre/: objetivo.py  visao_geral.py
memoria_equipe/: latest_kickoff_task_outputs.db  long_term_memory_storage.db
memoria_equipe/entities/Analista_de_Texto_Roteirista_Principal_Revisor_de_Roteiro/: chroma.sqlite3
memoria_equipe/short_term/Analista_de_Texto_Roteirista_Principal_Revisor_de_Roteiro/: chroma.sqlite3
