[tool.poetry]
name = "equipe-roteirista"
version = "0.2.0"
description = ""
authors = ["Rodrigo Gonçalves <ro.go.calves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
streamlit = "^1.39.0"
crewai = {extras = ["tools"], version = "^0.70.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
